<resources>
    <string name="app_name">校招</string>
    <string name="navJob">职位</string>
    <string name="navSeminar">宣讲会</string>
    <string name="navDiscover">发现</string>
    <string name="navMine">我的</string>
    <string name="defaultText">测试文字</string>
    <string name="loginHint">点击登录</string>
    <string name="loginSubHint">勇于开始，才能找到成功的路</string>
    <string name="resume">我的简历</string>
    <string name="job_collection">职位收藏</string>
    <string name="focused_co">关注公司</string>
    <string name="delivery">我的投递</string>
    <string name="setting">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="share">分享给同学</string>
    <string name="about">关于我们</string>
    <string name="title_default">标题</string>
    <string name="username">Username</string>
    <string name="pwd">Password</string>
    <string name="login">帐号登录</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="etHintSignUpUserName">请输入用户名</string>
    <string name="etHintSignUpPwd">请输入密码</string>
    <string name="etHintSignUpPwdConfirm">请确认密码</string>
    <string name="etHintSignUpEmail">请输入邮箱，用户找回密码</string>
    <string name="etHintSignUpTel">请输入手机号</string>
    <string name="errorPwdNotSame">请确认两次密码输入一致</string>
    <string name="account_setting">账号设置</string>
    <string name="check_update">版本更新</string>
    <string name="no_need_update">当前为最新版本</string>
    <string name="rate">鼓励我们</string>
    <string name="clean_ram">清除缓存</string>
    <string name="sign_out">退出登录</string>
    <string name="text_time_just_now">刚刚</string>
    <string name="text_time_minutes_ago">分钟前</string>
    <string name="text_time_hours_ago">小时前</string>
    <string name="text_time_days_ago">天前</string>
    <string name="text_time_months_ago">个月前</string>
    <string name="text_time_years_ago">年前</string>
    <string name="job_description">职位描述</string>
    <string name="apply">申请</string>
    <string name="share_tip">在浏览器中访问此链接，下载App，找到心仪的工作吧！</string>
    <string name="loginDialogMessage">请登陆后使用此功能</string>
    <string name="loginDialogPositiveText">去登陆</string>
    <string name="loginDialogNegativeText">我再逛逛</string>
    <string name="mine_collection">我的收藏</string>
    <string name="position">职位</string>
    <string name="seminar">宣讲会</string>
    <string name="resueSendAlrealdy">请勿重复投递</string>
    <string name="resumeApplied">已申请</string>
    <string name="resumeApply">申请</string>
    <string name="mine_apply">我的投递</string>
    <string name="companyDescribe">公司描述</string>
    <string name="companyPosition">再招职位</string>
    <string name="name">姓名</string>
    <string name="position_target">求职目标</string>
    <string name="add_to_calender">添加到日历</string>
    <string name="seminar_description">宣讲会介绍</string>
    <string name="check_update_success">当前版本已是最新版本</string>
    <string name="feedback_hint">请将您宝贵的建议发送至我们邮箱（可能需要您先在本机登陆您的邮箱）</string>
    <string name="ok">确定</string>
    <string name="cancel">我没意见了</string>
    <string name="location">地区</string>
    <string name="industry">行业</string>
    <string name="companyType">公司性质</string>
    <string name="search">搜索</string>
    <string name="search_empty">不填关键词是不能搜索的！</string>
    <string name="search_result_empty">未能搜索到相应结果</string>
    <string name="search_hint">职位/宣讲会</string>
    <string name="text_account_settings_username">登陆用户名</string>
    <string name="text_account_settings_nickname">昵称</string>
    <string name="text_account_settings_email">邮箱</string>
    <string name="text_account_settings_mobile">手机号码</string>
    <string name="text_account_settings_pwd">更改密码</string>
    <string name="text_account_settings_logout">账户注销</string>
    <string name="text_account_settings_logout_hint">方法一：使用注冊郵箱發送包含用戶名及联系电话的邮件至2418620804@qq.com,客服会联系你进行账号注销。\n方法二：致电18896527609，与客服沟通进行账号注销。服务时间：周一至周五9：30-17：00。\n特别提醒：账号注销后，不能恢复。</string>
    <string name="username_cannot_change">方法一：使用注冊郵箱發送包含用戶名及联系电话的邮件至2418620804@qq.com,客服会联系你进行修改。\n方法二：致电18896527609，与客服沟通进行修改。服务时间：周一至周五9：30-17：00。\n特别提醒：用户名作为登陆凭证请勿随意修改，注意保护营私。</string>
    <string name="username_change_title">修改登陆用户名</string>
    <string name="nickname_modify">修改昵称</string>
    <string name="nickname_modify_hint"></string>
    <string name="nickname">昵称</string>
    <string name="text_account_settings_avatar">头像</string>
    <string name="email_modify">修改邮箱</string>
    <string name="email">邮箱</string>
    <string name="email_modify_hint">修改成功后需使用新的邮箱登录</string>
    <string name="mobile_modify_title">修改手机号</string>
    <string name="mobile_modify_hint">手机号修改后，请用修改后的手机号登录</string>
    <string name="forgot_pwd_hint">由于各大云商提供的短信验证码功能，个人认证需要上架App或著作权等限制条件，暂不支持通过短信验证码重置密码。\n 可通过以下方式重置密码:\n方法一：使用注冊郵箱發送包含用戶名及联系电话的邮件至2418620804@qq.com,客服会联系你进行修改。\n方法二：致电18896527609，与客服沟通进行修改。服务时间：周一至周五9：30-17：00。\n特别提醒：请勿在邮件中包含密码等信息注意保护隐私。</string>
    <string name="resume_empty">您还未创建简历，是否现在创建</string>
    <string name="resumeDiloagPositiveText">去创建</string>
    <string name="resumeDialogNegativeText">以后再说</string>
    <string name="resume_edit">编辑简历</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birth">出生年月</string>
    <string name="address">常住地</string>
    <string name="mobile">联系方式</string>
    <string name="edu_info">教育经历</string>
    <string name="school">学校</string>
    <string name="start_time">入学时间</string>
    <string name="end_time">毕业时间</string>
    <string name="qualifications">学历</string>
    <string name="skill">专业</string>
    <string name="work_type">职位类型</string>
    <string name="work_type_hint">全职/兼职</string>
    <string name="work_address">工作地点</string>
    <string name="work_address_hint">苏州</string>
    <string name="salary">薪资要求</string>
    <string name="work_industry">行业</string>
    <string name="tag">自我简介</string>
    <string name="pwd_modify_title">修改密码</string>
    <string name="pwd_modify_hint">如果您忘记了你的密码，请使用注册邮箱联系客服2418620804@qq.com，进行修改\n如果您记得你的密码请登录http://colafans.cn/index.php/index/user/login.html进行修改</string>
    <string-array name="search_arr">
        <item>职位</item>
        <item>宣讲会</item>
    </string-array>
</resources>
